# yolov5-onnxruntime

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: detector.h  utils.h
src/: .clang-format  detector.cpp  example.cpp  main.cpp  utils.cpp
